Change profile image source to relative path
Updated profile image source to use relative path.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <section id="about" class="container hero">
       <div class="hero-left card profile-card">
         <div class="profile-row">
-          <img src="images/profile.jpeg" alt="Vedant Mishra — profile" class="profile-photo">
+          <img src="profile.jpeg" alt="Vedant Mishra — profile" class="profile-photo">
           <div class="profile-meta">
             <h2 class="name">Vedant Mishra</h2>
             <p class="role">Web Developer · Problem Solver · Learner</p>
