Update image source paths in index.html

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <section id="about" class="container hero">
       <div class="hero-left card profile-card animate-on-scroll">
         <div class="profile-row">
-          <img src="images/profile.jpeg" alt="Vedant Mishra — profile" class="profile-photo">
+          <img src="profile.jpeg" alt="Vedant Mishra — profile" class="profile-photo">
           <div class="profile-meta">
             <h2 class="name">Vedant Mishra</h2>
             <p class="role">Web Developer · Problem Solver · Learner</p>
@@ -118,7 +118,7 @@
 
       <div class="projects-grid">
         <article class="project-card card animate-on-scroll">
-          <img src="images/project.jpeg" alt="Digital Declutter project screenshot" class="project-thumb">
+          <img src="project.jpeg" alt="Digital Declutter project screenshot" class="project-thumb">
           <div class="project-content">
             <h3>Digital Declutter — Smart Subscription Handling</h3>
             <p class="muted">A productivity web application that helps users identify, track and optimize subscriptions. Features include renewal reminders, total spend tracking, duplicate-subscription detection, and an intelligent dashboard to regain control over recurring costs.</p>
