Update LinkedIn icon source in index.html

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <!-- LinkedIn Button -->
           <li>
             <a href="https://www.linkedin.com/in/vedant-mishra-b629612b7/" target="_blank" class="social-btn linkedin-btn">
-              <img src="Portfolio/linkedin-svgrepo-com.svg" class="social-icon" alt="LinkedIn">
+              <img src="linkedin.svg" class="social-icon" alt="LinkedIn">
               LinkedIn
             </a>
           </li>
