Update brand name to 'Vedant Mishra'

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header class="site-header">
     <div class="container header-inner">
       <div class="brand">
-        <h1 class="brand-name">Vedant <span class="dot">.</span></h1>
+        <h1 class="brand-name">Vedant Mishra <span class="dot">.</span></h1>
         <p class="brand-sub">B.Tech CSE • VIT Bhopal University</p>
       </div>
 
